--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ h5 {
 
 @media screen and (min-width: 1024px) {
     .card {
-        width: 1024px;
+        width: 990px;
     }
     body {
         display: flex;
@@ -96,5 +96,8 @@ h5 {
     }
     .info {
         display: block !important;
+    }
+    .list-genero {
+        display: inline-table !important;
     }
 }
